--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,20 @@ a:visited {
   text-decoration: inherit;
   color: inherit;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #000;
+  border-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
