Applying carousel view

--- a/src/components/PhotosPreview/PhotosPreview.css
+++ b/src/components/PhotosPreview/PhotosPreview.css
@@ -5,7 +5,7 @@
 .imagePreview {
   position: relative;
   filter: brightness(0.5);
-  transition: 200ms;
+  transition: 300ms !important;
 }
 
 .imagePreviewLabel {
