--- a/src/pages/AboutPage/About.css
+++ b/src/pages/AboutPage/About.css
@@ -15,6 +15,9 @@
   margin: 0;
   font-size: 100px;
   text-align: right;
+  top: -15px;
+  line-height: 100px;
+  position: relative;
 }
 
 .aboutImageWrapper {
