--- a/src/pages/Portifolio/Portfolio.css
+++ b/src/pages/Portifolio/Portfolio.css
@@ -1,9 +1,12 @@
 .portfolioList {
   display: flex;
   justify-content: center;
-  margin-top: 60px;
   margin-bottom: 50px;
-  padding: 16px;
+}
+
+.containerPhotos {
+  display: flex;
+  justify-content: center;
 }
 
 .image {
