--- a/src/pages/AboutPage/About.css
+++ b/src/pages/AboutPage/About.css
@@ -1,13 +1,15 @@
 .aboutContainer {
-  display: grid;
-  grid-template-columns: repeat(1fr);
-  justify-items: center;
+  display: flex;
+  margin: 0 20%;
+  flex-direction: column;
+  align-items: center;
   position: relative;
   font-family: Plus Jakarta Sans, "sans-serif";
 }
 
 .aboutHeader {
   display: flex;
+  width: 100%;
 }
 
 .aboutHeaderTitle {
@@ -20,19 +22,14 @@
 }
 
 .aboutImageWrapper {
-  /* grid-column: 6/13; */
+  width: 100%;
 }
 
-.aboutImageWrapperMobile {
-  /* grid-column: 1/13; */
-}
-
-.aboutImageMobile {
+.aboutImage {
   width: 100%;
 }
 
 .description {
-  /* grid-column: 2/12; */
   margin-top: 200px;
   font-size: 34px;
 }
@@ -42,12 +39,11 @@
   margin-bottom: 250px;
   display: flex;
   flex-direction: column;
-  padding: 24px;
 }
 
 .endPresentation {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   gap: 10%;
   font-weight: bold;
 }
@@ -67,7 +63,6 @@
   text-transform: uppercase;
   font-size: 75px;
   margin: 0;
-  margin-left: 36px;
 }
 
 .endPresentationTitle2 {
@@ -76,7 +71,6 @@
   font-size: 75px;
   margin: 0;
   align-self: flex-end;
-  margin-right: 36px;
 }
 
 .contactSection {
@@ -93,5 +87,8 @@
     font-size: 50px;
     z-index: 1;
     color: white;
+  }
+  .aboutContainer {
+    margin: 0;
   }
 }
