--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,19 +1,89 @@
 .homeContainer {
   display: flex;
   justify-content: center;
-  height: 80vh;
+  flex-direction: column;
+  margin: 0 20%;
+}
+
+.homeTitle {
+  margin: 0;
+  font-size: 5em;
+  margin-left: -1em;
 }
 
 .homeImg {
   width: 100%;
+  height: 70vh;
   object-fit: cover;
+  object-position: 0 50%;
 }
 
-@media (max-width: 600px) {
+.homeFirstParagraph {
+  margin-bottom: 0;
+  position: absolute;
+  font-size: 30px;
+  z-index: 7;
+  right: 75px;
+  max-width: 40%;
+  color: white;
+  text-align: right;
+  top: 55vh;
+
+  font-weight: 600;
+}
+
+.secondParagrahContainer {
+  display: flex;
+  gap: 16px;
+  justify-content: space-between;
+  margin-top: 50px;
+  align-items: center;
+}
+
+.homeSecondParagraph {
+  font-size: 30px;
+  width: 50%;
+  text-align: justify;
+}
+
+.secondParagraphImg {
+  aspect-ratio: 3/2;
+  object-fit: cover;
+  justify-self: flex-end;
+  object-position: 0 25%;
+  width: 50%;
+}
+
+.imagesContainer {
+  display: flex;
+  margin-top: 100px;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.imagesContainer img:first-of-type {
+  width: 50%;
+}
+
+.imagesContainer img:nth-of-type(2) {
+  width: 40%;
+  object-fit: contain;
+}
+
+.lastImg {
+  width: 100%;
+  align-self: center;
+  margin-top: 75px;
 }
 
 @media (min-width: 1200px) {
   .homeImg {
-    object-position: 0 75%;
+    /* object-position: 0 75%; */
+  }
+}
+
+@media (max-width: 600px) {
+  .homeContainer {
+    margin: 0;
   }
 }
