--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -13,41 +13,38 @@
 
 .homeImg {
   width: 100%;
-  height: 70vh;
   object-fit: cover;
-  object-position: 0 50%;
+  object-position: 50% 60%;
+  aspect-ratio: 3;
 }
 
 .homeFirstParagraph {
   margin-bottom: 0;
-  position: absolute;
   font-size: 30px;
-  z-index: 7;
-  right: 75px;
-  max-width: 40%;
+  margin-right: 10px;
+  position: relative;
   color: white;
   text-align: right;
-  top: 55vh;
-
+  padding-right: 75px;
   font-weight: 600;
+  right: 0;
+  bottom: 200px;
 }
 
 .secondParagrahContainer {
   display: flex;
-  gap: 16px;
-  justify-content: space-between;
+  gap: 5em;
   margin-top: 50px;
   align-items: center;
 }
 
 .homeSecondParagraph {
   font-size: 30px;
-  width: 50%;
   text-align: justify;
 }
 
 .secondParagraphImg {
-  aspect-ratio: 3/2;
+  aspect-ratio: 5/4;
   object-fit: cover;
   justify-self: flex-end;
   object-position: 0 25%;
@@ -77,9 +74,6 @@
 }
 
 @media (min-width: 1200px) {
-  .homeImg {
-    /* object-position: 0 75%; */
-  }
 }
 
 @media (max-width: 600px) {
