--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -1,3 +1,14 @@
+.menuBarMobile {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  justify-content: space-between;
+  position: fixed;
+  background-color: white;
+  padding: 0.5em;
+  z-index: 2;
+}
+
 .navBar {
   width: 100%;
   display: flex;
@@ -39,11 +50,17 @@
   background: black;
 }
 
-.socialSections {
+.socialSectionsDesktop {
   z-index: 11;
   position: fixed;
   padding: 0.5em;
   right: 75px;
+}
+
+.socialSectionsMobile {
+  display: flex;
+  gap: 0.5em;
+  margin-right: 1em;
 }
 
 @media (max-width: 600px) {
