--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -7,6 +7,7 @@
   background-color: white;
   padding: 0.5em;
   z-index: 2;
+  transition: top 0.5s;
 }
 
 .navBar {
@@ -32,24 +33,6 @@
   margin-right: 24px;
 }
 
-.navBarItem::before {
-  content: "";
-  width: 8px;
-  height: 8px;
-  position: relative;
-  background: transparent;
-  border: 1.5px solid;
-  border-radius: 50%;
-  box-sizing: border-box;
-  margin-right: 12px;
-  transition: background 1s cubic-bezier(0.19, 1, 0.22, 1),
-    transform 1s cubic-bezier(0.19, 1, 0.22, 1);
-}
-
-.navBarItemSelected::before {
-  background: black;
-}
-
 .socialSectionsDesktop {
   z-index: 11;
   position: fixed;
@@ -63,8 +46,36 @@
   margin-right: 1em;
 }
 
+@media (min-width: 600px) {
+  .navBarItem::before {
+    content: "";
+    width: 8px;
+    height: 8px;
+    position: relative;
+    background: transparent;
+    border: 1.5px solid;
+    border-radius: 50%;
+    box-sizing: border-box;
+    margin-right: 12px;
+    transition: background 1s cubic-bezier(0.19, 1, 0.22, 1),
+      transform 1s cubic-bezier(0.19, 1, 0.22, 1);
+  }
+
+  .navBarItemSelected::before {
+    background: black;
+  }
+}
+
 @media (max-width: 600px) {
   .headerMenu {
     padding: 14px;
+  }
+
+  .navBarItems {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5em;
+    padding: 1em;
+    font-size: 1.5em;
   }
 }
