--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -4,10 +4,17 @@
   width: 100%;
   justify-content: space-between;
   position: fixed;
+  top: 0px;
   background-color: white;
   padding: 0.5em;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 300ms;
   z-index: 2;
-  transition: top 0.5s;
+}
+
+.menuBarMobileDown {
+  top: -6rem;
 }
 
 .navBar {
