--- a/src/pages/Portifolio/Portfolio.css
+++ b/src/pages/Portifolio/Portfolio.css
@@ -1,3 +1,9 @@
+.circularProgress {
+  position: absolute;
+  right: 50%;
+  top: 30%;
+}
+
 .portfolioList {
   display: flex;
   justify-content: center;
